outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-22_21-21-05/evaluations/problem_eval-6884638207217730091_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance to the current path, using a non-linear scaling factor to prioritize either local or global optimization, while also incorporating a penalty for revisiting nodes to avoid cycles.}
                                                                                                                                                                                                 ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance to the current path, using a non-linear scaling factor to prioritize either local or global optimization, while also incorporating a penalty for revisiting nodes to avoid cycles.}
                                                                                                                                                                                                 ^
SyntaxError: unmatched '}'
